Ajout du curseur sur le bloc maillage / + légers correctifs

--- a/src/components/homepage/Hero.astro
+++ b/src/components/homepage/Hero.astro
@@ -3,7 +3,7 @@
 ---
 
 <!-- TODO: AJOUTER UN SCROLL DOWN A LA FIN DE L'ANIMATION -->
-<section class="hero relative z-40 flex h-dvh flex-col justify-between overflow-hidden bg-firefly-900 lg:flex-row lg:flex-nowrap">
+<section class="hero relative z-40 flex h-screen flex-col justify-between overflow-hidden bg-firefly-900 lg:flex-row lg:flex-nowrap">
 	<div class="relative flex h-[15%] w-full flex-col justify-end lg:h-full lg:w-[10%] lg:flex-row">
 		<p class="text-decoratif self-center font-primary text-8xl uppercase text-fantasy-50 opacity-0 lg:rotate-180">portfolio</p>
 		<div class="hero-border w-0 border-b-2 border-fantasy-50 opacity-65 lg:h-0 lg:border-b-0 lg:border-r-2"></div>
