--- a/src/components/homepage/Maillage.astro
+++ b/src/components/homepage/Maillage.astro
@@ -8,40 +8,43 @@ const { text, link } = Astro.props;
 ---
 
 <!-- TODO : rajouter curseur, + habiller un peu le bloc (images ?) -->
-<section class="maillage flex h-screen w-full items-center bg-fantasy-50 py-10">
-	<div class="relative h-fit w-full">
-		<a href={link} class="nav absolute left-0 top-0 z-10 h-full w-full"></a>
-		<div class="marquee pointer-events-none flex w-full flex-row flex-nowrap overflow-hidden py-2 sm:py-3 lg:py-3 xl:py-5">
-			<ul class="marquee-right flex flex-row flex-nowrap space-x-6 px-3 md:space-x-14 md:px-7">
-				<li class="text-outline font-bebas">{text}</li>
-				<li class="font-zenloop">{text}</li>
-				<li class="font-nothing capitalize">{text}</li>
-			</ul>
-			<ul class="marquee-right-bis flex flex-row flex-nowrap space-x-6 px-3 md:space-x-14 md:px-7">
-				<li class="text-outline font-bebas">{text}</li>
-				<li class="font-zenloop">{text}</li>
-				<li class="font-nothing capitalize">{text}</li>
-			</ul>
-		</div>
-		<div class="marquee pointer-events-none flex w-full flex-row flex-nowrap overflow-hidden py-2 sm:py-3 xl:py-5">
-			<ul class="marquee-left flex flex-row flex-nowrap space-x-6 px-3 md:space-x-14 md:px-7">
-				<li class="font-primary capitalize">{text}</li>
-				<li class="font-sixcaps uppercase">{text}</li>
-				<li class="text-outline font-abril lowercase">{text}</li>
-			</ul>
-			<ul class="marquee-left-bis flex flex-row flex-nowrap space-x-6 px-3 md:space-x-14 md:px-7">
-				<li class="font-primary capitalize">{text}</li>
-				<li class="font-sixcaps uppercase">{text}</li>
-				<li class="text-outline font-abril lowercase">{text}</li>
-			</ul>
-		</div>
+<section class="maillage relative flex h-fit w-full flex-col items-center bg-firefly-900 py-10 lg:py-24">
+	<a href={link} class="nav absolute left-0 top-0 z-10 h-full w-full lg:cursor-none"></a>
+	<div class="marquee pointer-events-none flex w-full flex-row flex-nowrap overflow-hidden py-2 sm:py-3 lg:py-3 xl:py-5">
+		<ul class="marquee-right flex flex-row flex-nowrap space-x-6 px-3 md:space-x-14 md:px-7">
+			<li class="text-outline font-bebas">{text}</li>
+			<li class="font-zenloop">{text}</li>
+			<li class="font-nothing capitalize">{text}</li>
+		</ul>
+		<ul class="marquee-right-bis flex flex-row flex-nowrap space-x-6 px-3 md:space-x-14 md:px-7">
+			<li class="text-outline font-bebas">{text}</li>
+			<li class="font-zenloop">{text}</li>
+			<li class="font-nothing capitalize">{text}</li>
+		</ul>
+	</div>
+	<div class="marquee pointer-events-none flex w-full flex-row flex-nowrap overflow-hidden py-2 sm:py-3 xl:py-5">
+		<ul class="marquee-left flex flex-row flex-nowrap space-x-6 px-3 md:space-x-14 md:px-7">
+			<li class="font-primary capitalize">{text}</li>
+			<li class="font-sixcaps uppercase">{text}</li>
+			<li class="text-outline font-abril lowercase">{text}</li>
+		</ul>
+		<ul class="marquee-left-bis flex flex-row flex-nowrap space-x-6 px-3 md:space-x-14 md:px-7">
+			<li class="font-primary capitalize">{text}</li>
+			<li class="font-sixcaps uppercase">{text}</li>
+			<li class="text-outline font-abril lowercase">{text}</li>
+		</ul>
+	</div>
+	<div
+		class="cursor-discover pointer-events-none left-0 top-0 z-30 hidden rounded-full p-[25px] opacity-0 lg:absolute lg:z-30 lg:flex lg:h-[130px] lg:w-[130px] lg:items-center lg:justify-center lg:bg-fantasy-50"
+	>
+		<span class="font-primary text-[25px] leading-[28px]">Découvrir</span>
 	</div>
 </section>
 <style lang="postcss">
 	/* STYLES DES TEXTES */
 	.text-outline {
 		-webkit-text-stroke-width: 1px;
-  		-webkit-text-stroke-color: #253a3c;
+  		-webkit-text-stroke-color: #f9F5F3;
   		color: transparent !important;
 	}
 
@@ -52,7 +55,7 @@ const { text, link } = Astro.props;
 	/* DÉFILEMENT INFINI */
 	.maillage li {
 		white-space: nowrap;
-		@apply text-firefly-900 w-fit inline-block;
+		@apply text-fantasy-50 w-fit inline-block;
 	}
 
 	.marquee {
@@ -107,3 +110,39 @@ const { text, link } = Astro.props;
 		}
 	}
 </style>
+<script>
+	import gsap from "gsap";
+	import { ScrollTrigger } from "gsap/src/ScrollTrigger";
+	gsap.registerPlugin(ScrollTrigger);
+	let mmDesktop = gsap.matchMedia();
+	mmDesktop.add("(min-width: 1024px)", () => {
+		// Cursor animation
+		const maillageSection = document.querySelector<HTMLElement>(".maillage");
+		const cursorDiscover = document.querySelector(".cursor-discover");
+
+		// Afficher le curseur à l'entrée sur le conteneur
+		maillageSection.addEventListener("mouseenter", () => {
+			gsap.to(cursorDiscover, { opacity: 1, duration: 0.3 });
+		});
+
+		// Cacher le curseur à la sortie du conteneur
+		maillageSection.addEventListener("mouseleave", () => {
+			gsap.to(cursorDiscover, { opacity: 0, duration: 0.3 });
+		});
+
+		// Suivi du curseur au déplacement
+		maillageSection.addEventListener("mousemove", (e) => {
+			const offsetX = e.clientX - maillageSection.getBoundingClientRect().left;
+			const offsetY = e.clientY - maillageSection.getBoundingClientRect().top;
+
+			if (cursorDiscover) {
+				gsap.to(cursorDiscover, {
+					x: offsetX - cursorDiscover.clientWidth / 2,
+					y: offsetY - cursorDiscover.clientHeight / 2,
+					ease: "power3.out",
+					duration: 0.2
+				});
+			}
+		});
+	});
+</script>
