--- a/src/components/projects/Listing.astro
+++ b/src/components/projects/Listing.astro
@@ -8,26 +8,31 @@ import Button from "../common/Button.astro";
 	{
 		data.map((projet) => (
 			<div class="project group text-firefly-900">
-				<div class="px-3 lg:px-12 xl:flex xl:h-full xl:flex-row-reverse xl:items-center xl:justify-between xl:gap-16 xl:px-0 xl:group-even:flex-row 2xl:gap-32">
+				<div class="px-3 lg:px-12 xl:flex xl:h-full xl:flex-row-reverse xl:items-center xl:justify-between xl:gap-16 xl:px-12 xl:group-even:flex-row 2xl:gap-32 ">
 					{/* IMAGE MOBILE */}
 					<img
-						class="mx-auto h-[65vh] w-auto rounded-2xl object-contain lg:hidden"
+						class="img-mobile mx-auto h-[65vh] w-auto rounded-2xl object-contain blur-sm lg:hidden"
 						src={projet.imageMobile.src}
 						alt={projet.imageMobile.alt}
 					/>
 					{/* IMAGE DESKTOP */}
-					<img
+					{/* 					<img
 						class="img-desktop hidden lg:mx-auto lg:block lg:h-full lg:w-4/5 lg:rounded-xl lg:object-contain lg:blur-sm xl:mx-0 xl:w-7/12 xl:rounded-none xl:group-odd:rounded-l-xl xl:group-odd:rounded-r-none xl:group-even:rounded-l-none xl:group-even:rounded-r-xl"
 						src={projet.image.src}
 						alt={projet.image.alt}
+					/> */}
+					<img
+						class="img-desktop hidden lg:mx-auto lg:block lg:h-full lg:w-4/5 lg:rounded-xl lg:object-contain lg:blur-sm xl:mx-0 xl:rounded-xl xl:group-odd:w-7/12 xl:group-even:w-6/12"
+						src={projet.image.src}
+						alt={projet.image.alt}
 					/>
-					<div class="flex w-full flex-col space-y-8 text-firefly-900 xl:h-1/2 xl:w-5/12 xl:justify-center xl:group-odd:items-end xl:group-odd:pl-12 xl:group-even:pr-12 2xl:group-odd:pl-32 2xl:group-even:pr-32">
+					<div class="flex w-full flex-col space-y-8 text-firefly-900 xl:h-1/2 xl:justify-center xl:group-odd:w-5/12 xl:group-odd:items-end xl:group-even:w-6/12 xl:group-even:pr-12">
 						<div class="mx-auto w-fit overflow-hidden xl:mx-0">
-							<h2 class="mt-6 font-primary text-5xl text-firefly-900 group-odd:text-end lg:translate-y-full xl:mt-0 xl:text-6xl 2xl:text-7xl">
+							<h2 class="mt-6 translate-y-full font-primary text-5xl text-firefly-900 group-odd:text-end xl:mt-0 xl:text-6xl 2xl:text-7xl">
 								{projet.name}
 							</h2>
 						</div>
-						<div class="content flex w-full flex-col text-center lg:opacity-0 xl:group-odd:text-end xl:group-even:text-start">
+						<div class="content flex w-full flex-col text-center opacity-0 xl:group-odd:text-end xl:group-even:text-start">
 							{projet.type === "Ecole" && <p class="">OBJECTIF</p>}
 							<p class=" text-firefly-900 xl:text-2xl">{projet.description}</p>
 							{projet.type === "Entreprise" && (
@@ -79,7 +84,22 @@ import Button from "../common/Button.astro";
 	const projects = document.querySelectorAll<HTMLElement>(".project");
 	// MOBILE ANIMATION
 	let mmMobile = gsap.matchMedia();
-	mmMobile.add("(max-width: 1023px)", () => {});
+	mmMobile.add("(max-width: 1023px)", () => {
+		projects.forEach((project) => {
+			let tl = gsap.timeline({
+				scrollTrigger: {
+					trigger: project,
+					start: "top 30%"
+				}
+			});
+			let title = project.querySelector("h2");
+			let image = project.querySelector(".img-mobile");
+			let content = project.querySelector(".content");
+			tl.to(image, { filter: "blur(0px)", duration: 1 });
+			tl.to(title, { translateY: 0, duration: 0.65 }, "<");
+			tl.to(content, { opacity: 1, duration: 1 });
+		});
+	});
 
 	// DESKTOP ANIMATION
 	let mmDesktop = gsap.matchMedia();
@@ -88,7 +108,7 @@ import Button from "../common/Button.astro";
 			let tl = gsap.timeline({
 				scrollTrigger: {
 					trigger: project,
-					start: "top 30%"
+					start: "top 40%"
 				}
 			});
 			let title = project.querySelector("h2");
