--- a/src/components/common/Menu.astro
+++ b/src/components/common/Menu.astro
@@ -2,7 +2,7 @@
 const { menuLinks } = Astro.props;
 ---
 
-<>
+<div>
 	<div
 		class="modal-menu fixed bottom-0 right-0 top-0 z-50 flex h-dvh w-full flex-col items-start justify-between bg-firefly-500 pb-6 pl-6 pr-2 pt-2 lg:bottom-6 lg:right-6 lg:top-6 lg:w-1/2 lg:flex-col-reverse lg:rounded-3xl lg:px-5 lg:pb-5 lg:pt-12 xl:w-2/5 2xl:w-1/3"
 	>
@@ -34,7 +34,7 @@ const { menuLinks } = Astro.props;
 			<span class="text-xl text-fantasy-50">menu</span>
 		</div>
 	</div>
-</>
+</div>
 
 <style is:global lang="postcss">
 /* MODALE */
