--- a/src/components/homepage/Maillage.astro
+++ b/src/components/homepage/Maillage.astro
@@ -7,7 +7,6 @@ interface Props {
 const { text, link } = Astro.props;
 ---
 
-<!-- TODO : rajouter curseur, + habiller un peu le bloc (images ?) -->
 <section class="maillage relative flex h-fit w-full flex-col items-center bg-firefly-900 py-10 lg:py-24">
 	<a href={link} class="nav absolute left-0 top-0 z-10 h-full w-full lg:cursor-none"></a>
 	<div class="marquee pointer-events-none flex w-full flex-row flex-nowrap overflow-hidden py-2 sm:py-3 lg:py-3 xl:py-5">
@@ -35,9 +34,9 @@ const { text, link } = Astro.props;
 		</ul>
 	</div>
 	<div
-		class="cursor-discover pointer-events-none left-0 top-0 z-30 hidden rounded-full p-[25px] opacity-0 lg:absolute lg:z-30 lg:flex lg:h-[130px] lg:w-[130px] lg:items-center lg:justify-center lg:bg-fantasy-50"
+		class="cursor-discover pointer-events-none hidden lg:absolute lg:left-0 lg:top-0 lg:z-10 lg:flex lg:h-[130px] lg:w-[130px] lg:items-center lg:justify-center lg:rounded-full lg:bg-fantasy-50 lg:p-[25px] lg:opacity-0"
 	>
-		<span class="font-primary text-[25px] leading-[28px]">Découvrir</span>
+		<span class="font-primary text-xl uppercase">Découvrir</span>
 	</div>
 </section>
 <style lang="postcss">
