--- a/src/pages/projets.astro
+++ b/src/pages/projets.astro
@@ -28,8 +28,8 @@ const menuLinks = [
 ];
 ---
 
-<Layout menuLinks={menuLinks} isHome={false} title="Projets" textureFooter={true}>
-	<main class="bg-fantasy-50 bg-texture opacity-0">
+<Layout menuLinks={menuLinks} title="Projets" textureFooter={true}>
+	<main class="bg-fantasy-50 bg-texture">
 		<Banner title="projets" h1="lorem" />
 		<Listing data={listingProjects} />
 	</main>
