--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,11 +6,10 @@ import Footer from "../components/common/Footer.astro";
 interface Props {
 	title: string;
 	textureFooter: boolean;
-	isHome: boolean;
 	menuLinks: any;
 }
 
-const { title, textureFooter, isHome, menuLinks } = Astro.props;
+const { title, textureFooter, menuLinks } = Astro.props;
 ---
 
 <!doctype html>
@@ -23,7 +22,7 @@ const { title, textureFooter, isHome, menuLinks } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class={`relative bg-firefly-900 ${isHome ? "" : "no-home"}`}>
+	<body class="relative bg-firefly-900">
 		<div
 			id="transition-wrapper"
 			class="fixed left-0 top-0 z-[99] flex h-screen w-full items-center justify-center border-b-2 border-fantasy-50 bg-firefly-900"
@@ -78,6 +77,12 @@ body * {
 	const modal = document.querySelector<HTMLElement>(".modal-menu");
 	const isDesktopVersion = window.innerWidth >= 1024;
 
+	// Si le hero a déjà été joué, ajoute la classe qui permet de scroll directement après la transition
+	if (sessionStorage.getItem("heroPlayed") === "true") {
+		const body = document.querySelector<HTMLElement>("body");
+		body.classList.add("direct-scroll-enable");
+	}
+
 	// TRANSITION DE PAGE
 	let tlEnter = gsap.timeline({});
 	let tlExit = gsap.timeline({});
@@ -89,40 +94,37 @@ body * {
 
 	// Animation de sortie
 	const pageExit = async () => {
+		// Diminuer l'opacité de la modale
 		if (modal.classList.contains("active") && isDesktopVersion) {
 			modal.style.transition = "opacity 0.5s";
 			modal.style.opacity = "0";
 		}
-		return tlExit.to("body", { overflow: "hidden" }, "<").to(
-			"#transition-wrapper",
-			{
-				translateY: 0,
-				duration: 0.8,
-				ease: "power1.inOut"
-			},
-			"<"
-		);
+		// Faire descendre le conteneur
+		return tlExit.to("#transition-wrapper", {
+			translateY: 0,
+			duration: 0.8,
+			ease: "power1.inOut"
+		});
 	};
 
-	// Animation d'entrée
+	// Animation d'entrée / logo
 	const pageEnter = async () => {
 		return tlEnter
-			.to("body", { overflow: "hidden" })
+			.to(".direct-scroll-enable", { overflow: "hidden" })
 			.to("#transition-wrapper #logo", { opacity: 1, duration: 0.7, delay: 0.2 }, "<")
 			.fromTo("#transition-wrapper #logo #c", { fill: "#f9f5f300" }, { fill: "#f9f5f3", duration: 0.85 })
 			.fromTo("#transition-wrapper #logo #m", { opacity: 0 }, { opacity: 1, duration: 0.85 }, "<")
 			.fromTo("#transition-wrapper #logo #point", { opacity: 0 }, { opacity: 1, duration: 0.85 })
 			.to("#transition-wrapper", { translateY: "-100%", duration: 0.8, ease: "power1.inOut" })
-			.to("main", { opacity: 1 }, "<")
-			.to("body.no-home", { overflow: "visible" })
+			.to(".direct-scroll-enable", { overflow: "visible" })
 			.to("#transition-wrapper #logo", { opacity: 0 });
 	};
 
 	// Gestion du clic sur les liens et des animations
 	const setupTransitions = () => {
+		// Récupérer les liens qui nécessitent un changement de page (pas des ancres)
 		const links = document.querySelectorAll("a.nav");
 
-		// Pour les liens nécessitants un changement de page :
 		links.forEach((link) => {
 			link.addEventListener("click", async (event) => {
 				event.preventDefault(); // Empêcher le comportement par défaut au clic
