--- a/src/components/homepage/Hero.astro
+++ b/src/components/homepage/Hero.astro
@@ -28,9 +28,9 @@
 			</div>
 			<div class="mt-6 overflow-hidden text-center">
 				<h1
-					class="subtitle inline-block translate-y-0 font-primary text-2xl text-fantasy-50 md:text-4xl lg:pb-4 xl:text-5xl 2xl:text-6xl"
+					class="subtitle inline-block translate-y-0 font-primary text-2xl lowercase text-fantasy-50 md:text-4xl lg:pb-4 xl:text-5xl 2xl:text-6xl"
 				>
-					développeuse intégratrice web
+					Développeuse <span class="font-content text-xl md:text-2xl lg:text-3xl xl:text-4xl">&</span> Intégratrice web
 				</h1>
 			</div>
 		</div>
