--- a/src/pages/projets.astro
+++ b/src/pages/projets.astro
@@ -4,6 +4,10 @@ import Listing from "../components/projects/Listing.astro";
 import Banner from "../components/common/Banner.astro";
 import listingProjects from "../../src/datas/projects.json";
 
+const title = "Projets Web | Portfolio Mélanie Casu - Développeuse Front-End";
+const metaDescription =
+	"Parcourez une collection variée de projets web, réalisés dans le cadre de mes études ou en entreprise, illustrant mon apprentissage et ma technique.";
+
 const menuLinks = [
 	{
 		text: "accueil",
@@ -28,9 +32,9 @@ const menuLinks = [
 ];
 ---
 
-<Layout menuLinks={menuLinks} title="Projets" textureFooter={true}>
+<Layout menuLinks={menuLinks} title={title} textureFooter={true} metaDescription={metaDescription}>
 	<main class="bg-fantasy-50 bg-texture">
-		<Banner title="projets" h1="lorem" />
+		<Banner title="projets" h1="Mes réalisations Web" />
 		<Listing data={listingProjects} />
 	</main>
 </Layout>
