--- a/src/components/common/Footer.astro
+++ b/src/components/common/Footer.astro
@@ -11,7 +11,7 @@ const { textureFooter } = Astro.props;
 		<div
 			class="flex h-full flex-col flex-nowrap items-center justify-start p-6 pt-14 lg:flex-row lg:justify-between lg:pl-20 lg:pr-40 lg:pt-6"
 		>
-			<a href="/">
+			<a aria-label="Aller sur la page d'accueil" href="/">
 				<img class="logo w-40 opacity-5 md:w-48 lg:w-56" src="/logos/logo-beige.svg" alt="Logo de Mélanie Casu en beige" />
 			</a>
 
