Changement de la typo pour bouton / maillage / skill titre

--- a/src/components/homepage/Maillage.astro
+++ b/src/components/homepage/Maillage.astro
@@ -34,9 +34,9 @@ const { text, link } = Astro.props;
 		</ul>
 	</div>
 	<div
-		class="cursor-discover pointer-events-none hidden lg:absolute lg:left-0 lg:top-0 lg:z-10 lg:flex lg:h-[130px] lg:w-[130px] lg:items-center lg:justify-center lg:rounded-full lg:bg-fantasy-50 lg:p-[25px] lg:opacity-0"
+		class="cursor-discover pointer-events-none hidden lg:absolute lg:left-0 lg:top-0 lg:z-10 lg:flex lg:h-[110px] lg:w-[110px] lg:items-center lg:justify-center lg:rounded-full lg:bg-fantasy-50 lg:p-[25px] lg:opacity-0"
 	>
-		<span class="font-primary text-xl uppercase">Découvrir</span>
+		<span class="font-bebas text-xl uppercase text-firefly-900">Découvrir</span>
 	</div>
 </section>
 <style lang="postcss">
