--- a/src/components/homepage/Skills.astro
+++ b/src/components/homepage/Skills.astro
@@ -173,7 +173,7 @@ const skills = [
 									src={skill.imgRvb.src}
 									alt={skill.imgRvb.alt}
 								/>
-								<span class="inline-block w-full text-center text-base lowercase">{skill.text}</span>
+								<span class="inline-block w-full text-center font-bebas text-base lowercase">{skill.text}</span>
 							</div>
 						</div>
 					</div>
