--- a/src/components/common/Button.astro
+++ b/src/components/common/Button.astro
@@ -12,7 +12,7 @@ const { url = "#", text = "Découvrir", additionalClass, isExternalLink = false 
 <div class=`btn cursor-pointer bg-transparent block w-fit h-fit px-2 py-2 lg:hover:before:w-full relative ${additionalClass}`>
 	<a
 		target={isExternalLink ? "_blank" : "_self"}
-		class="relative z-20 px-1 font-primary font-medium uppercase transition-colors lg:text-firefly-900"
+		class="relative z-20 px-1 font-bebas text-2xl uppercase transition-colors hover:text-firefly-500 lg:text-firefly-900"
 		href={url}>{text}</a
 	>
 </div>
