--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,10 +20,56 @@ const { title, textureFooter, menuLinks, metaDescription } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="google-site-verification" content="HlsAuTX-AErMCVMNVhTh79ELFeYgcUuPg0tmAwd7mOc" />
 		<meta name="generator" content={Astro.generator} />
-		<meta name="description" content={metaDescription} />
 		<meta name="viewport" content="width=device-width" />
-		<meta name="title" content={title} />
 		<title>{title}</title>
+
+		<!-- DONNÉES STRUCTUREES -->
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "Person",
+				"name": "Mélanie Casu",
+				"jobTitle": "Développeur intégrateur web",
+				"image": "https://melaniecasu.netlify.app/images/couverture-rs.png",
+				"url": "https://melaniecasu.netlify.app/",
+				"email": "melanie.casu-pro@outlook.fr",
+				"nationality": "Française"
+			}
+		</script>
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "WebSite",
+				"name": "Mélanie Casu Portfolio",
+				"image": "https://melaniecasu.netlify.app/images/couverture-rs.png",
+				"url": "https://melaniecasu.netlify.app/"
+			}
+		</script>
+
+		<!-- META TAGS -->
+		<meta name="description" content={metaDescription} />
+		<meta name="title" content={title} />
+
+		<!-- OPEN GRAPH FACEBOOK -->
+		<meta property="og:title" content="Portfolio Mélanie Casu" />
+		<meta property="og:url" content="https://melaniecasu.netlify.app/" />
+		<meta property="og:image" content="https://melaniecasu.netlify.app/images/couverture-rs.png" />
+		<meta
+			property="og:description"
+			content="Découvrez un aperçu de mon univers de développeuse front-end et intégratrice web : projets, formation et compétences, réunis dans ce portfolio dédié au web."
+		/>
+		<meta property="og:site_name" content="Mélanie Casu | Développeuse & Intégratrice Web" />
+		<meta property="og:type" content="website" />
+
+		<!-- TWITTER CARDS OPEN GRAPH  -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:url" content="https://melaniecasu.netlify.app/" />
+		<meta name="twitter:title" content="Portfolio Mélanie Casu" />
+		<meta
+			name="twitter:description"
+			content="Découvrez un aperçu de mon univers de développeuse front-end et intégratrice web : projets, formation et compétences, réunis dans ce portfolio dédié au web."
+		/>
+		<meta name="twitter:image:src" content="https://melaniecasu.netlify.app/images/couverture-rs.png" />
 	</head>
 	<body class="relative bg-firefly-900">
 		<div
