--- a/src/components/common/Button.astro
+++ b/src/components/common/Button.astro
@@ -9,24 +9,10 @@ interface Props {
 const { url = "#", text = "Découvrir", additionalClass, isExternalLink = false } = Astro.props;
 ---
 
-<div class=`btn cursor-pointer bg-transparent block w-fit h-fit px-2 py-2 lg:hover:before:w-full relative ${additionalClass}`>
+<div class=`btn cursor-pointer block w-fit relative ${additionalClass}`>
 	<a
 		target={isExternalLink ? "_blank" : "_self"}
-		class="relative z-20 px-1 font-bebas text-2xl uppercase transition-colors hover:text-firefly-500 lg:text-firefly-900"
+		class="relative z-20 font-bebas text-2xl uppercase transition-colors hover:text-firefly-500 lg:text-firefly-900"
 		href={url}>{text}</a
 	>
 </div>
-
-<style lang="postcss" is:global>
-    .btn::before {
-        content: "";
-        @apply absolute bottom-1 left-1 w-1/3 h-2 border-b-[1px] border-l-[1px] rounded-bl-sm border-fantasy-50;
-    }
-
-/* ANIMATION AU HOVER SUR LE BOUTON */
-    @media screen and (min-width: 1024px) {
-        .btn::before {
-            transition: width 0.5s;
-        }
-    }
-</style>
