--- a/src/components/projects/Listing.astro
+++ b/src/components/projects/Listing.astro
@@ -26,25 +26,49 @@ import Button from "../common/Button.astro";
 								{projet.name}
 							</h2>
 						</div>
-						<div class="content flex w-full flex-col text-center opacity-0 xl:group-odd:text-end xl:group-even:text-start">
-							{projet.type === "Ecole" && <p class="uppercase">Objectif</p>}
-							<p class=" text-firefly-900 xl:text-2xl">{projet.description}</p>
-							{projet.type === "Entreprise" && (
+						{/* MISE EN PAGE PROJET ENTREPRISE */}
+						{projet.type === "Entreprise" && (
+							<div class="content flex w-full flex-col text-center opacity-0 xl:group-odd:text-end xl:group-even:text-start">
+								<p class=" text-firefly-900 xl:text-2xl">{projet.description}</p>
 								<p class="mt-2">
 									Un projet réalisé par
-									<a class="" target="_blank" href="https://www.eliophot.com/">
+									<a class="underline" target="_blank" href="https://www.eliophot.com/">
 										Eliophot
 									</a>
 								</p>
-							)}
-							{projet.type === "Ecole" && <p class="mt-2">Projet réalisé dans le cadre de ma formation</p>}
-							<Button
-								isExternalLink={true}
-								text={`Visiter le site ${projet.name}`}
-								url={projet.link}
-								additionalClass="mt-6 self-center xl:self-end"
-							/>
-						</div>
+								<Button
+									isExternalLink={true}
+									text={`Visiter le site ${projet.name}`}
+									url={projet.link}
+									additionalClass="mt-6 self-center xl:self-end"
+								/>
+							</div>
+						)}
+						{/* MISE EN PAGE PROJET ECOLE */}
+						{projet.type === "Ecole" && (
+							<div class="content flex w-full flex-col text-center opacity-0 xl:group-odd:text-end xl:group-even:text-start">
+								<p class="uppercase">Objectif</p>
+								<p class="text-firefly-900 xl:text-2xl">{projet.description}</p>
+								<p class="mt-6 uppercase">Technologies</p>
+								<p class="text-firefly-900 xl:text-2xl">{projet.technologies}</p>
+								<p class="mt-2">Projet réalisé dans le cadre de ma formation</p>
+								{projet.linkIsRepo ? (
+									<Button
+										isExternalLink={true}
+										text={`Voir le code du projet ${projet.name}`}
+										url={projet.link}
+										additionalClass="mt-6 self-center xl:self-end"
+									/>
+								) : (
+									<Button
+										isExternalLink={true}
+										text={`Visiter le site ${projet.name}`}
+										url={projet.link}
+										additionalClass="mt-6 self-center xl:self-end"
+									/>
+								)}
+							</div>
+						)}
 					</div>
 				</div>
 
