Correction données structurées 2

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,23 +28,14 @@ const { title, textureFooter, menuLinks, metaDescription } = Astro.props;
 		<script type="application/ld+json">
 			{
 				"@context": "https://schema.org",
-				"@graph": [
-					{
-						"@type": "Person",
-						"name": "Mélanie Casu",
-						"jobTitle": "Développeur intégrateur web",
-						"image": "https://melaniecasu.netlify.app/images/couverture-rs.png",
-						"url": "https://melaniecasu.netlify.app/",
-						"email": "melanie.casu-pro@outlook.fr",
-						"nationality": "Française"
-					},
-					{
-						"@type": "WebSite",
-						"name": "Mélanie Casu Portfolio",
-						"image": "https://melaniecasu.netlify.app/images/couverture-rs.png",
-						"url": "https://melaniecasu.netlify.app/"
-					}
-				]
+				"@type": "Person",
+				"name": "Mélanie Casu",
+				"jobTitle": "Développeuse intégratrice web",
+				"image": "https://melaniecasu.netlify.app/images/couverture-rs.png",
+				"url": "https://melaniecasu.netlify.app/",
+				"email": "mailto:melanie.casu-pro@outlook.fr",
+				"nationality": "Française",
+				"sameAs": ["https://www.linkedin.com/in/m%C3%A9laniecasu/", "https://github.com/casumelanie"]
 			}
 		</script>
 
