Augmentation taille logo transition en version mobile

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -73,7 +73,7 @@ const { title, textureFooter, menuLinks, metaDescription } = Astro.props;
 				role="img"
 				aria-labelledby="logoTitle logoDesc"
 				id="logo"
-				class="mx-auto w-40 opacity-0 md:w-48 lg:w-72"
+				class="mx-auto w-52 opacity-0 lg:w-72"
 				version="1.0"
 				viewBox="39.59 121.14 312.05 130.8"
 				xmlns="http://www.w3.org/2000/svg"
